Package: rename to UnityToolbox

--- a/UnityToolbox.asmdef
+++ b/UnityToolbox.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "MyBox",
+    "name": "UnityToolbox",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
